[package]
name = "plotters-conrod"
version = "0.0.0"
description = "Conrod backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/valeriansaliou/plotters-conrod"
repository = "https://github.com/valeriansaliou/plotters-conrod.git"
keywords = ["plotters", "conrod", "backend"]
categories = ["visualization"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[dependencies]
plotters-backend = "0.3.0"

[dev-dependencies]
plotters = { version = "0.3.0", default_features = false, features = ["chrono", "bitmap_backend", "ttf", "line_series"] }
conrod_glium = "0.70"
conrod_winit = "0.70"
conrod_core = "0.70"
glium = "0.24"
chrono = { version = "0.4", default-features = false }
psutil = { version = "3.2.0" }
