[package]
name = "plotters-conrod"
version = "0.3.8"
description = "Conrod backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/valeriansaliou/plotters-conrod"
repository = "https://github.com/valeriansaliou/plotters-conrod.git"
documentation = "https://docs.rs/crate/plotters-conrod/"
keywords = ["plotters", "conrod", "backend"]
categories = ["visualization"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[dependencies]
plotters-backend = "0.3"
num-traits = "0.2"
conrod_core = "^0.70"
libc = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
plotters = { version = "0.3", default_features = false, features = ["chrono", "bitmap_backend", "area_series", "ttf"] }
conrod_glium = "0.70"
conrod_winit = "0.70"
winit = "0.19"
glium = "0.24"
chrono = { version = "0.4", default-features = false }
psutil = "3.2"
