[package]
name = "plotters-conrod"
version = "0.3.11"
description = "Conrod backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
homepage = "https://github.com/valeriansaliou/plotters-conrod"
repository = "https://github.com/valeriansaliou/plotters-conrod.git"
documentation = "https://docs.rs/crate/plotters-conrod/"
keywords = ["plotters", "conrod", "backend"]
categories = ["visualization"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[dependencies]
plotters-backend = "0.3"
num-traits = "0.2"
conrod_core = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
plotters = { version = "0.3", default_features = false, features = ["chrono", "bitmap_backend", "area_series", "ttf"] }
conrod_glium = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
conrod_winit = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
winit = "0.25"
glium = "0.30"
chrono = { version = "0.4", default-features = false }
sysinfo = "0.21.1"
